# url-shortener

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yaml  index.html  pyproject.toml
alembic/: env.py
alembic/versions/: 161c73d77128_add_redirects_count.py  6d470c19afa5_add_created_at.py  95af0dd6e27e_init.py
src/: config.py  dependencies.py  exceptions.py  logger.py  main.py  service.py  shortener.py
src/database/: database.py  models.py  repository.py
src/middleware/: request_logger.py
tests/: conftest.py  test_api.py  test_service.py
