[project]
name = "url-shortener"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "async-lru>=2.2.0",
    "asyncpg>=0.31.0",
    "fastapi>=0.135.1",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "black>=26.1.0",
    "httpx>=0.28.1",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.4",
]


[tool.black]
target-version = ['py312']
line-length = 120

[tool.mypy]
python_version = 3.12
strict = true
warn_unused_configs = true

[tool.ruff]
target-version = 'py312'
line-length = 120

[tool.ruff.lint]
# Правила проверки
select = [
    'E', # PEP 8 ошибки (отступы, пробелы)
    'F', # Критические ошибки (неопределенные переменные)
    'B', # Баги в коде
    'I', # Сортировка импортов (isort)
    'N', # Стиль именования (PEP 8)
    'UP', # Современный Python (Например, автозамена `Dict` на `dict`)
    'W', # Предупреждения
]

# Что игнорировать
ignore = []

# Автофикс для конкретных правил
fixable = ['ALL']

# Запрет на автофикс конуретных правил
unfixable = []

